--- a/src/scss/templates/_projects.scss
+++ b/src/scss/templates/_projects.scss
@@ -10,6 +10,9 @@
         left: 0;
         top: 0;
     }
+    &__heading {
+        margin-bottom: 1.714rem;
+    }
     &__content {
         position: relative;
     }
