--- a/src/scss/templates/_hero.scss
+++ b/src/scss/templates/_hero.scss
@@ -16,25 +16,30 @@
     &__content {
         max-width: 35.714rem;
         position: relative;
-        margin-left: 3.928rem;
+        margin-left: 2.5rem;
     }
     &__title {
-        margin-bottom: 1.357rem;
+        margin-bottom: 1.3rem;
     }
     &__text {
         font-family: "FuturaBook";
         font-size: 1.571rem;
+        line-height: 1.37;
         color: $white;
-        margin-bottom: 2.928rem;
+        margin-bottom: 3.1rem;
         --animate-delay: 0.3s;
     }
     &__buttons {
+        display: flex;
         --animate-delay: 0.3s;
     }
     &__button {
-        padding: 1.143rem 1.714rem;
+        width: 14.785rem;
+        padding: 1.2rem 0;
+        display: flex;
+        justify-content: center;
         &:first-child {
-            margin-right: 1.428rem;
+            margin-right: 1.45rem;
         }
     }
     &__instagram {
@@ -70,13 +75,14 @@
             width: 50px;
             height: 1px;
             background-color: $primary;
-            margin-left: 8px;
+            margin-left: 13px;
         }
     }
 }
 .title {
     font-family: "YesevaOne", serif;
     font-size: 2.857rem;
+    line-height: 1.3;
     text-transform: uppercase;
     color: $white;
     &__text_primary {
@@ -93,11 +99,11 @@
     transition: color 0.3s;
     display: flex;
     align-items: center;
-    padding: 2.428rem 6.428rem 2.428rem 3.428rem;
+    padding: 2.428rem 3.49rem 2.428rem 3.428rem;
     z-index: 1;
     &::after {
         content: url("../../img/button-down.svg");
-        margin-left: 0.857rem;
+        margin-left: 1.3rem;
     }
     &:hover {
         color: $primary;
