--- a/src/scss/templates/_leave-contacts.scss
+++ b/src/scss/templates/_leave-contacts.scss
@@ -1,5 +1,5 @@
 .leave-contact {
-    background: url("../../img/house.svg") no-repeat -3% -43%;
+    background: url("../img/bg-line-white.svg") no-repeat center/cover, url("../../img/house.svg") no-repeat -3% -43%;
     padding-bottom: 9.285rem;
     &__form-wrap {
         width: 36.15rem;
