--- a/src/scss/templates/_projects.scss
+++ b/src/scss/templates/_projects.scss
@@ -11,13 +11,14 @@
         top: 0;
     }
     &__heading {
+        font-size: 1.76rem;
         margin-bottom: 1.714rem;
     }
     &__content {
         position: relative;
     }
     &__section-title {
-        margin-bottom: 3rem;
+        margin-bottom: 6.11rem;
     }
 }
 @media screen and (max-width: 760px) {
