--- a/src/scss/templates/_control.scss
+++ b/src/scss/templates/_control.scss
@@ -1,6 +1,6 @@
 .control {
     position: relative;
-    padding-bottom: 10.142rem;
+    padding-bottom: 4.4rem;
     margin-top: -23.142rem;
     &__section-title {
         margin-bottom: 2.214rem;
@@ -9,8 +9,9 @@
         margin: 0 auto 4.464rem;
     }
     &__text {
-        max-width: 28rem;
+        max-width: 40.7rem;
         text-align: center;
+        font-size: 1.428rem;
         line-height: 1.698;
         margin: 0 auto 4.285rem;
         &::before {
@@ -20,7 +21,7 @@
             background-color: $primary;
             border-radius: 30px;
             display: block;
-            margin: 0 auto 2.5rem;
+            margin: 0 auto 2rem;
         }
     }
     &__form {
@@ -37,17 +38,16 @@
     &__input {
         width: 16.5rem;
         max-width: 100%;
-        padding: 0.5rem 0;
+        padding: 0.1rem 0 0.5rem;
     }
     &__button {
+        font-size: 1.071rem;
         vertical-align: bottom;
-        padding: 1.2857rem 4.785rem;
-        margin-left: 3.5rem;
+        padding: 1.12rem 4.2rem;
     }
     &__policy {
         flex-basis: 100%;
         margin-top: 2.5rem;
-        text-align: center;
     }
 }
 .video {
@@ -86,9 +86,9 @@
         cursor: pointer;
         &::before {
             content: "";
-            border: 1rem solid transparent;
+            border: 0.9rem solid transparent;
             border-right: none;
-            border-left: 2rem solid $white;
+            border-left: 1.5rem solid $white;
             position: absolute;
             left: 50%;
             top: 50%;
@@ -132,7 +132,6 @@
             }
         }
         &__button {
-            margin-left: 0;
             order: 1;
             transform: translateY(50%);
         }
