--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,6 +14,7 @@
 @import "./templates/projects";
 @import "./templates/types";
 @import "./templates/leave-contacts";
+@import "./templates/repair-styles";
 @import "./templates/design";
 @import "./templates/working-methods";
 @import "./templates/command";
