--- a/src/scss/templates/_design.scss
+++ b/src/scss/templates/_design.scss
@@ -28,6 +28,7 @@
 }
 @media screen and (max-width: 760px) {
     .design-project {
+      padding-top: 14.416rem;
         background-color: $light-black;
         &__heading, &__description {
             color: $white;
