--- a/src/scss/templates/_section.scss
+++ b/src/scss/templates/_section.scss
@@ -79,6 +79,7 @@
     .section {
         &-title {
             &__heading {
+                font-size: 1.85rem;
                 margin-bottom: 1.833rem;
             }
             &__text {
