--- a/src/scss/templates/_types.scss
+++ b/src/scss/templates/_types.scss
@@ -55,6 +55,7 @@
 }
 @media screen and (max-width: 760px) {
     .repair-types {
+        padding: 5.928rem 0 2.5rem;
         &__card {
             margin-bottom: 5.642rem;
         }
