--- a/src/scss/_interface.scss
+++ b/src/scss/_interface.scss
@@ -218,6 +218,7 @@ label.invalid {
 }
 @media screen and (max-width: 570px) {
     .button {
-        width: 100%;
+      width: 100%;
+      font-size: 1.09rem;
     }
 }
