--- a/src/scss/templates/_control.scss
+++ b/src/scss/templates/_control.scss
@@ -98,7 +98,7 @@
 }
 @media screen and (max-width: 760px) {
     .control {
-        background-color: $light-black;
+        background-color: $dark;
         padding-bottom: 0;
         margin-top: 0;
         &__video {
