--- a/src/scss/templates/_repair-styles.scss
+++ b/src/scss/templates/_repair-styles.scss
@@ -1,6 +1,12 @@
 .repair-styles {
   background: $dark url("../../img/repair-styles-bg.jpg") no-repeat center/cover;
   padding: 9.785rem 0 6.071rem;
+  &__wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
   &__text {
     max-width: 29.357rem;
   }
@@ -39,7 +45,8 @@
     }
   }
   &__images {
-    width: 53.642rem;
+    flex-grow: 1;
+    max-width: 53.642rem;
     position: relative;
   }
   &__slide {
@@ -57,6 +64,40 @@
     img {
       max-width: none;
       height: 100%;
+    }
+  }
+  &__swiper {
+    display: none;
+    width: 100%;
+    height: 242px;
+    position: relative;
+    img {
+      width: 100%;
+      min-height: 100%;
+    }
+    &-button {
+      width: 36px;
+      height: 36px;
+      border-radius: 50%;
+      background-color: $primary;
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      margin: 0;
+      &_prev {
+        left: 1.166rem;
+        background: $primary url('../../img/left.svg') no-repeat center;
+        &::after {
+          display: none;
+        }
+      }
+      &_next {
+        right: 1.166rem;
+        background: $primary url('../../img/right.svg') no-repeat center;
+        &::after {
+          display: none;
+        }
+      }
     }
   }
 }
@@ -83,6 +124,41 @@
     }
     .repair-styles__image-wrapper:last-child {
       height: 44.659rem;
+    }
+  }
+}
+@media screen and (max-width: 1400px) {
+  .repair-styles {
+    &__images {
+      max-width: 45rem;
+    }
+  }
+}
+@media screen and (max-width: 760px) {
+  .repair-styles {
+    background: $white;
+    padding: 0;
+    margin-bottom: -10.083rem;
+    &__wrapper {
+      display: block;
+    }
+    &__text {
+      max-width: none;
+    }
+    &__heading {
+      font-size: 1.833rem;
+      line-height: 1.385;
+      text-align: center;
+      margin-bottom: 2rem;
+    }
+    &__navigation {
+      display: none;
+    }
+    &__images {
+      display: none;
+    }
+    &__swiper {
+      display: block;
     }
   }
 }
