feat: add link on footer menu

--- a/src/scss/templates/_repair-styles.scss
+++ b/src/scss/templates/_repair-styles.scss
@@ -1,5 +1,5 @@
 .repair-styles {
-  background: $dark url("../../img/repair-styles-bg.jpg") no-repeat center/cover;
+  background: $dark url("../../img/repair-styles-bg.webp") no-repeat center/cover;
   padding: 9.785rem 0 6.071rem;
   &__wrapper {
     display: flex;
